[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/defaultEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://scripts/camera/follow_camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/Ping360Viewport.gd" type="Script" id=3]
[ext_resource path="res://scripts/mission_timer.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/hud.gd" type="Script" id=5]
[ext_resource path="res://scripts/camera/lookat_camera.gd" type="Script" id=6]
[ext_resource path="res://scenes/components/ping360.shader" type="Shader" id=7]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/ui/pause_menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/popup/MissionEndedPopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/popup/instructions_popup.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )

[sub_resource type="GDScript" id=3]
script/source = "extends PanelContainer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func _input(event):
	if event.is_action_pressed(\"help\"):
		if not self.is_visible():
			self.show()
		else:
			self.hide()
"

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="HUD" type="Control"]
pause_mode = 2
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
instructions_popup_path = NodePath("InstructionsPopup")
pause_menu_path = NodePath("PauseMenu")
camera_follow_path = NodePath("ViewportFollowCamera/Viewport/FollowCamera")
camera_lookat_path = NodePath("ViewportLookAtCamera/Viewport/LookAtCamera")

[node name="ViewportFollowCamera" type="ViewportContainer" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -362.0
margin_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportFollowCamera"]
size = Vector2( 362, 248 )
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 512
shadow_atlas_quad_1 = 3

[node name="FollowCamera" type="Camera" parent="ViewportFollowCamera/Viewport" groups=["cameras"]]
transform = Transform( -0.995028, 0, 0.0995974, 0, 1, 0, -0.0995974, 0, -0.995028, -1.54154, 7.13712, -2.96935 )
cull_mask = 1048573
environment = ExtResource( 1 )
far = 497.4
script = ExtResource( 2 )
speed = 2.0

[node name="ViewportLookAtCamera" type="ViewportContainer" parent="."]
pause_mode = 2
visible = false
margin_right = 361.997
margin_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportLookAtCamera"]
size = Vector2( 362, 248 )
handle_input_locally = false
render_target_update_mode = 0
shadow_atlas_size = 512
shadow_atlas_quad_1 = 3

[node name="LookAtCamera" type="Camera" parent="ViewportLookAtCamera/Viewport"]
transform = Transform( -0.998367, -1.8596e-09, 0.0571282, 0.0271268, 0.880072, 0.474066, -0.0502769, 0.474841, -0.878634, 0, 14.74, 0 )
script = ExtResource( 6 )

[node name="Ping360Viewport" type="ViewportContainer" parent="."]
pause_mode = 2
visible = false
material = SubResource( 5 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -296.0
margin_top = -265.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="Ping360Viewport"]
size = Vector2( 296, 265 )
handle_input_locally = false
render_target_update_mode = 0
shadow_atlas_size = 512
shadow_atlas_quad_1 = 3

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="Ping360Viewport/Viewport" groups=["cameras"]]
transform = Transform( -0.995028, 0, 0.0995974, 0, 1, 0, -0.0995974, 0, -0.995028, -1.54154, 7.13712, -2.96935 )
cull_mask = 3
environment = ExtResource( 1 )
enabled = true
script = ExtResource( 2 )

[node name="HelpPanel" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.619608 )
margin_right = 266.0
margin_bottom = 486.0
script = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HelpPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 259.0
margin_bottom = 479.0

[node name="help" type="Label" parent="HelpPanel/VBoxContainer"]
margin_right = 252.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( -32, 6 )
text = "H - Toggle Help (this)
ESC - Pause menu

ROV:
Z/S: Forward/Backwards
Q/D: Yaw left/right
Up: Rise
Down: Dive
Left/Right: Strafe left/right
L/M: Camera tilt down/up
O/P: Close/open gripper
F3/F4: Increase/decrease lights
U: Change tool

C - switch camera//vehicle

Free camera:
Hold left button + a/w/s/d + q/e
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 25.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
text = "00:00"
align = 1
valign = 1

[node name="MissionTimer" type="Timer" parent="."]
process_mode = 0
script = ExtResource( 4 )
label_path = NodePath("../TimerLabel")

[node name="InstructionsPopup" parent="." instance=ExtResource( 11 )]

[node name="MissionEndedPopup" parent="." instance=ExtResource( 10 )]

[node name="PauseMenu" parent="." instance=ExtResource( 9 )]

[connection signal="timeout" from="MissionTimer" to="." method="_on_MissionTimer_timeout"]
[connection signal="visibility_changed" from="InstructionsPopup" to="." method="_on_Popup_visibility_changed"]
[connection signal="visibility_changed" from="MissionEndedPopup" to="." method="_on_Popup_visibility_changed"]
[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_Popup_visibility_changed"]
